// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> create Popover 1`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        aria-controls="fd-default-popover"
        aria-expanded={false}
        aria-haspopup={true}
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 2`] = `
<div
  className="fd-popover blue"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        aria-controls="fd-disabled-popover"
        aria-expanded={false}
        aria-haspopup={true}
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 3`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        aria-controls="fd-aligned-popover"
        aria-expanded={false}
        aria-haspopup={true}
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 4`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        aria-controls="fd-arrowless-popover"
        aria-expanded={false}
        aria-haspopup={true}
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;
